See the License for the specific language governing permissions and
limitations under the License.
////
= TinkerPop CHANGELOG

== TinkerPop 4.0.0 (Gremlin's Wildest Dreams)

image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/images/gremlins-wildest-dreams.png[width=185]

[[release-4-0-0]]
=== TinkerPop 4.0.0 (NOT OFFICIALLY RELEASED YET)

* Bumped SLF4j to 2.0.16.

[[release-4-0-0-beta-1]]
=== TinkerPop 4.0.0-beta.1 (January 17, 2025)

* Added support for deserialization of `Set` for `gremlin-javascript`.
* Added grammar-based `Translator` for all languages including explicit ones for Java and anonymization.
* Removed old `Translator` infrastructure.
* Removed grammar support for enums to be used as variables.
* Changed `valueMap` in grammar to disallow the `boolean` argument as a variable to avoid ambiguous step calls.
* Added integer overflow checks for `sum()`.
* Modified Gremlin Server to only support instantiation of `authentication.authenticationHandler` with three-arg constructor.
* Removed previously deprecated two-arg constructors for `authentication.authenticationHandler` implementations.
* Removed previously deprecated one-arg constructor for `AbstractAuthenticationHandler`.
* Deprecated `withEmbedded()` and `withRemote()` options on `AnonymousTraversalSource`.
* Added `with()` on `AnonymousTraversalSource` to cover both embedded and remote creation options.
* Renamed the traversal discarding `none()` step to `discard()`.
* Added new list filtering step `none()`.
* Replaced `gremlin-groovy` with `gremlin-lang` as the default language in `gremlin-server`.
* Changed `sum()` to retain the type common to the stream rather than always promoting to `long` given the need for it to multiple by the `long` bulk value for the traverser.
* Added support for `Set` in GraphSON and GraphBinary serialization for `gremlin-javascript`, where it previously just converted to array.
* Added `Set` syntax in `gremlin-language`.