@@ -266,11 +266,6 @@ public class TranslateVisitor extends AbstractParseTreeVisitor<Void> implements 
     }
 
     @Override
-    public Void visitChainedParentOfGraphTraversal(final GremlinParser.ChainedParentOfGraphTraversalContext ctx) {
-        return visitChildren(ctx);
-    }
-
-    @Override
     public Void visitNestedTraversal(final GremlinParser.NestedTraversalContext ctx) {
         if (ctx.ANON_TRAVERSAL_ROOT() == null)
             appendAnonymousSpawn();
@@ -554,6 +549,11 @@ public class TranslateVisitor extends AbstractParseTreeVisitor<Void> implements 
 
     @Override
     public Void visitTraversalMethod_difference_Object(final GremlinParser.TraversalMethod_difference_ObjectContext ctx) {
+        return visitChildren(ctx);
+    }
+
+    @Override
+    public Void visitTraversalMethod_discard(final GremlinParser.TraversalMethod_discardContext ctx) {
         return visitChildren(ctx);
     }
 
@@ -1606,11 +1606,6 @@ public class TranslateVisitor extends AbstractParseTreeVisitor<Void> implements 
     }
 
     @Override
-    public Void visitTraversalSelfMethod(final GremlinParser.TraversalSelfMethodContext ctx) {
-        return visitChildren(ctx);
-    }
-
-    @Override
     public Void visitTraversalComparator(final GremlinParser.TraversalComparatorContext ctx) {
         return visitChildren(ctx);
     }
@@ -1806,11 +1801,6 @@ public class TranslateVisitor extends AbstractParseTreeVisitor<Void> implements 
 
     @Override
     public Void visitTraversalTerminalMethod_toBulkSet(final GremlinParser.TraversalTerminalMethod_toBulkSetContext ctx) {
-        return visitChildren(ctx);
-    }
-
-    @Override
-    public Void visitTraversalSelfMethod_discard(final GremlinParser.TraversalSelfMethod_discardContext ctx) {
         return visitChildren(ctx);
     }
 
