@@ -1780,6 +1780,8 @@ export const statics = {
   dateAdd: (...args: any[]) => callOnEmptyTraversal('dateAdd', args),
   dateDiff: (...args: any[]) => callOnEmptyTraversal('dateDiff', args),
   dedup: (...args: any[]) => callOnEmptyTraversal('dedup', args),
+  discard: (...args: any[]) => callOnEmptyTraversal('discard', args),
+  disjunct: (...args: any[]) => callOnEmptyTraversal('disjunct', args),
   drop: (...args: any[]) => callOnEmptyTraversal('drop', args),
   element: (...args: any[]) => callOnEmptyTraversal('element', args),
   elementMap: (...args: any[]) => callOnEmptyTraversal('elementMap', args),
@@ -1820,6 +1822,7 @@ export const statics = {
   mergeE: (...args: any[]) => callOnEmptyTraversal('mergeE', args),
   mergeV: (...args: any[]) => callOnEmptyTraversal('mergeV', args),
   min: (...args: any[]) => callOnEmptyTraversal('min', args),
+  none: (...args: any[]) => callOnEmptyTraversal('none', args),
   not: (...args: any[]) => callOnEmptyTraversal('not', args),
   optional: (...args: any[]) => callOnEmptyTraversal('optional', args),
   or: (...args: any[]) => callOnEmptyTraversal('or', args),
