@@ -195,6 +195,12 @@ const gremlins = {
     g_V_count_discard: [function({g}) { return g.V().count().discard() }], 
     g_V_hasLabelXpersonX_discard: [function({g}) { return g.V().hasLabel("person").discard() }], 
     g_VX1X_outXcreatedX_discard: [function({g, vid1}) { return g.V(vid1).out("created").discard() }], 
+    g_V_discard: [function({g}) { return g.V().discard() }], 
+    g_V_discard_none: [function({g}) { return g.V().discard().discard() }], 
+    g_V_discard_fold: [function({g}) { return g.V().discard().fold() }], 
+    g_V_discard_fold_none: [function({g}) { return g.V().discard().fold().discard() }], 
+    g_V_discard_fold_constantX1X: [function({g}) { return g.V().discard().fold().constant(1) }], 
+    g_V_projectXxX_byXcoalesceXage_isXgtX29XX_discardXX_selectXxX: [function({g}) { return g.V().project("x").by(__.coalesce(__.values("age").is(P.gt(29)), __.discard())).select("x") }], 
     g_V_drop: [function({g}) { return g.addV().as("a").addV().as("b").addE("knows").to("a") }, function({g}) { return g.V().drop() }, function({g}) { return g.V() }, function({g}) { return g.E() }], 
     g_V_outE_drop: [function({g}) { return g.addV().as("a").addV().as("b").addE("knows").to("a") }, function({g}) { return g.V().outE().drop() }, function({g}) { return g.V() }, function({g}) { return g.E() }], 
     g_V_properties_drop: [function({g}) { return g.addV().property("name", "bob").addV().property("name", "alice") }, function({g}) { return g.V().properties().drop() }, function({g}) { return g.V() }, function({g}) { return g.V().properties() }], 
