@@ -177,6 +177,12 @@ world.gremlins = {
     'g_V_count_discard': [(lambda g:g.V().count().discard())], 
     'g_V_hasLabelXpersonX_discard': [(lambda g:g.V().has_label('person').discard())], 
     'g_VX1X_outXcreatedX_discard': [(lambda g, vid1=None:g.V(vid1).out('created').discard())], 
+    'g_V_discard': [(lambda g:g.V().discard())], 
+    'g_V_discard_none': [(lambda g:g.V().discard().discard())], 
+    'g_V_discard_fold': [(lambda g:g.V().discard().fold())], 
+    'g_V_discard_fold_none': [(lambda g:g.V().discard().fold().discard())], 
+    'g_V_discard_fold_constantX1X': [(lambda g:g.V().discard().fold().constant(1))], 
+    'g_V_projectXxX_byXcoalesceXage_isXgtX29XX_discardXX_selectXxX': [(lambda g:g.V().project('x').by(__.coalesce(__.values('age').is_(P.gt(29)), __.discard())).select('x'))], 
     'g_V_drop': [(lambda g:g.add_v().as_('a').add_v().as_('b').add_e('knows').to('a')), (lambda g:g.V().drop()), (lambda g:g.V()), (lambda g:g.E())], 
     'g_V_outE_drop': [(lambda g:g.add_v().as_('a').add_v().as_('b').add_e('knows').to('a')), (lambda g:g.V().out_e().drop()), (lambda g:g.V()), (lambda g:g.E())], 
     'g_V_properties_drop': [(lambda g:g.add_v().property('name', 'bob').add_v().property('name', 'alice')), (lambda g:g.V().properties().drop()), (lambda g:g.V()), (lambda g:g.V().properties())], 
